  * Support writing outside the registered application paths
  * Allow to overwrite existing files

  * General:
  * Switched to qb as default volume format
  * Improved scene graph support for Magicavoxel vox files
  * Fixed invisible voxels for qb and qbt (Qubicle) volume format
  * Support automatic loading different volume formats for assets

 -- Martin Gerhardy <martin.gerhardy@gmail.com>  Sun, 7 Jun 2020 10:32:10 +0200

vengi (0.0.4.0-1) unstable; urgency=low

  * General:
  * Added support for writing binvox files
  * Added support for reading kvx (Build-Engine) and kv6 (SLAB6) voxel volumes
  * Performed some AFL hardening on voxel format code
  * Don't execute keybindings if the console is active
  * Added basic shader storage buffer support
  * Reduced voxel vertex size from 16 to 8 bytes
  * Apply checkerboard pattern to water surface
  * Improved tracy profiling support
  * A few highdpi fixes

  * Server:
  * Allow to specify the database port
  * Fixed loading database chunks

  * VoxEdit:
  * Added `scale` console command to produce LODs

  * VoxConvert:
  * Added ability to merge all layers into one

 -- Martin Gerhardy <martin.gerhardy@gmail.com>  Sun, 7 Jun 2020 10:31:09 +0200

vengi (0.0.3.0-1) unstable; urgency=low

  * Assets:
  * Added music tracks
  * Updated and added some new voxel models

  * VoxEdit:
  * Made some commands available to the ui
  * Tweak `thicken` command
  * Updated default tree generation ui values
  * Save layers to all supported formats
  * Fixed tree generation issue for some tree types
  * Changed default reference position to be at the center bottom
  * Reduced max supported volume size

  * General:
  * Print stacktraces on asserts
  * Improved tree generation (mainly used in voxedit)
  * Fixed a few asserts in debug mode for the microsoft stl
  * Added debian package support
  * Fixed a few undefined behaviour issues and integer overflows that could lead to problems